// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link <Link tabIndex={-1}> 1`] = `
<div>
  <a
    class=""
    href="/#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="-1"
  >
    Click me
  </a>
</div>
`;

exports[`Link <Link tabIndex={0}> 1`] = `
<div>
  <a
    class=""
    href="/#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`Link <Link tabIndex={1}> 1`] = `
<div>
  <a
    class=""
    href="/#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="1"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:false focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:false focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:false hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:false hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:false pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:false pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:true focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:true focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:true hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:true hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:true pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:false visitable:true pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:false focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:false focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:false hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:false hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:false pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(181, 206, 251);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:false pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(181, 206, 251);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:true focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:true focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:true hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:true hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:true pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(181, 206, 251);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:# light:true visitable:true pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(181, 206, 251);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:false focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:false focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:false hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:false hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:false pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:false pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:true focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:true focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:true hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:true hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(24, 101, 242);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:true pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false visitable:true pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:false focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:false focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:false hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:false hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:false pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(181, 206, 251);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:false pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(181, 206, 251);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:true focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:true focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:true hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:true hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(255, 255, 255);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:true pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(181, 206, 251);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true visitable:true pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(181, 206, 251);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:# light:false visitable:false focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(33, 36, 44);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:# light:false visitable:false focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgba(33, 36, 44, 0.64);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:# light:false visitable:false hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(33, 36, 44);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:# light:false visitable:false hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgba(33, 36, 44, 0.64);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:# light:false visitable:false pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:# light:false visitable:false pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(33, 36, 44);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false visitable:false focused 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(33, 36, 44);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false visitable:false focused 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: none; outline: none; align-items: center; color: rgba(33, 36, 44, 0.64);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false visitable:false hovered 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(33, 36, 44);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false visitable:false hovered 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgba(33, 36, 44, 0.64);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false visitable:false pressed 1`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(27, 80, 179);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false visitable:false pressed 2`] = `
<div>
  <a
    class=""
    href="#"
    style="cursor: pointer; text-decoration: underline currentcolor solid; outline: none; align-items: center; color: rgb(33, 36, 44);"
    tabindex="0"
  >
    Click me
  </a>
</div>
`;
